<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textSize="@dimen/letraTitulo"
        android:gravity="center"
        android:layout_marginTop="@dimen/marginTopBase">
    </TextView>

    <LinearLayout
        android:layout_marginTop="@dimen/marginTopBase"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:text="@string/Label1"
            android:gravity="center_horizontal"
            android:layout_weight="2"
            android:textSize="@dimen/TamanioLetra"
            android:layout_height="wrap_content">
        </TextView>

        <EditText
            android:layout_weight="1"
            android:textSize="@dimen/TamanioLetra"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>
        ></LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/marginTopBase"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:text="@string/Label2"
            android:gravity="center_horizontal"
            android:layout_weight="2"
            android:textSize="@dimen/TamanioLetra"
            android:layout_height="wrap_content">
        </TextView>

        <EditText

            android:id="@+id/IdFecha"
            android:focusable="false"
            android:clickable="true"
            android:maxLines="1"
            android:hint="Seleccione fecha"
            android:layout_weight="1"
            android:textSize="@dimen/TamanioLetra"
            android:inputType="date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>
        >

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/marginTopBase"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:text="@string/Label3"
            android:gravity="center_horizontal"
            android:layout_weight="2"
            android:textSize="@dimen/TamanioLetra"
            android:layout_height="wrap_content">
        </TextView>

        <Spinner
            android:id="@+id/IdGeneroSpinner"
            android:layout_weight="1"
            android:textSize="@dimen/TamanioLetra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></Spinner>

        ></LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/marginTopBase"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:text="@string/Label4"
            android:gravity="center_horizontal"
            android:layout_weight="2"
            android:textSize="@dimen/TamanioLetra"
            android:layout_height="wrap_content">
        </TextView>

        <EditText
            android:layout_weight="1"
            android:textSize="@dimen/TamanioLetra"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>
        >

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/marginTopBase"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:text="@string/Label5"
            android:gravity="center_horizontal"
            android:layout_weight="2"
            android:textSize="@dimen/TamanioLetra"
            android:layout_height="wrap_content">
        </TextView>

        <Spinner
            android:id="@+id/IdCalificacionSpinner"
            android:layout_weight="1"
            android:textSize="@dimen/TamanioLetra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></Spinner>

        ></LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/marginTopBase"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="match_parent"
            android:text="@string/Label1"
            android:gravity="center_horizontal"
            android:textSize="@dimen/TamanioLetra"
            android:layout_height="wrap_content">
        </Button>


        ></LinearLayout>












</LinearLayout>